<resources>
    <string name="app_name">MicroBuzzApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_explore">Explora tu ruta</string>
    <string name="action_alert">Alerta</string>
    <string name="action_log_out">Cerrar Sesión</string>
    <string name="log_in">Inicio Sesión</string>
    <string name="login_user">Usuario</string>
    <string name="login_conductor">Conductor</string>
    <string name="unidad">La unidad es...</string>
    <string name="comentario_usuario">Deja un comentario</string>
    <string name="tiempo_servicio">Tiempo de recorrido</string>
    <string name="calificacion_usuario">Tu calificación</string>
    <string name="enviar_calificacion_usuario">Enviar Calificación</string>
</resources>
