<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/edit_comentario_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:layout_gravity="center_vertical"
            android:id="@+id/editText_travel_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/comentario_usuario"
            android:textSize="26dp"
            android:textStyle="italic"
            android:inputType="textPersonName"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/unidad"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic|bold"
        android:textSize="22dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        >
        <ImageView
            android:id="@+id/image_location_id"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/location_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/button_selector_boarder"

            />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/tiempo_servicio"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic|bold"
        android:textSize="22dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        >
        <ImageView
            android:id="@+id/image_cheap_id"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/sad_face"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/button_selector_boarder"

            />
        <ImageView
            android:id="@+id/image_mediumprice_id"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/amazed_face"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/button_selector_boarder"

            />
        <ImageView
            android:id="@+id/image_expensive_price_id"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/happy_face"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/button_selector_boarder"

            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/calificacion_usuario"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic|bold"
        android:textSize="22dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        >
        <ImageView
            android:id="@+id/image_camera_id"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/camera"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/button_selector_boarder"

            />

        <ImageView
            android:id="@+id/image_galery_id"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/image_picture_photo"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/button_selector_boarder"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_save"
            android:layout_gravity="center_vertical"
            android:text="@string/enviar_calificacion_usuario"
            />
    </LinearLayout>


</LinearLayout>
